updated json link in notebooks

--- a/python-viz.ipynb
+++ b/python-viz.ipynb
@@ -13,7 +13,7 @@
     "First, we will need to upload our location data file to the object store.\n",
     "- Create an object store in your Spark service instance\n",
     "- On the palette to the right, navigate to the Data Sources tab\n",
-    "- Download [json] and add as a source"
+    "- Download [sample data](https://raw.githubusercontent.com/reinaldo422/bluemix-spark-viz/master/smoothed_data.json) and add as a source"
    ]
   },
   {
